# uulm-mensa-tui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  CanShowDetailsOf.hpp  Date.cpp  Date.hpp  DateDetails.cpp  DateDetails.hpp  Day.hpp  DaysView.cpp  DaysView.hpp  ListElement.hpp  ListView.cpp  ListView.hpp  MasterSlave.hpp  Meal.hpp  MealView.cpp  MealView.hpp  MealsView.cpp  MealsView.hpp  Model.cpp  WindowLike.hpp  constants.hpp  coordinates.hpp  list_view.cpp  list_view.hpp  main.cpp  utils.hpp  window_like.hpp  windows.h
